add license, tr_501 f(x) and documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
 Package: darts
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Darts
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: person("Matteo", "Miotto", email = "matteo.miotto9@gmail.com",
+  role = c("aut", "cre"))
+Description: This package contains several functions for dart scores handling and summary
+URL: https://github.com/mmiots9/darts
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports:
+  svDialogs
+RoxygenNote: 7.1.1
