--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,6 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
+importFrom(purrr,is_empty)
 importFrom(stringr,str_subset)
 importFrom(svDialogs,dlg_form)
