--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarise)
 importFrom(purrr,is_empty)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_remove)
 importFrom(stringr,str_subset)
 importFrom(svDialogs,dlg_form)
