--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(tr_501)
 import(dplyr)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_empty)
+importFrom(rmarkdown,render)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
 importFrom(stringr,str_subset)
