--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,17 @@
 
 export(day_resume_501_tr)
 export(frasi_dash_ita)
+export(leg_501)
 export(resume_all_501_tr)
+export(set_501)
 export(tr_501)
 import(dplyr)
+importFrom(dplyr,all_of)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_empty)
 importFrom(rmarkdown,render)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
+importFrom(stringr,str_split)
 importFrom(stringr,str_subset)
 importFrom(svDialogs,dlg_form)
