da testare match set e leg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,17 @@
 export(day_resume_501_tr)
 export(frasi_dash_ita)
 export(leg_501)
+export(match_501)
 export(resume_all_501_tr)
 export(set_501)
 export(tr_501)
 import(dplyr)
 importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_empty)
 importFrom(rmarkdown,render)
