--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(resume_all_501_tr)
 export(round_clock_3darts)
 export(set_501)
 export(tr_501)
+export(training)
 import(dplyr)
 importFrom(dplyr,all_of)
 importFrom(dplyr,arrange)
@@ -24,6 +25,7 @@ importFrom(lubridate,month)
 importFrom(lubridate,year)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_empty)
+importFrom(readr,parse_time)
 importFrom(rmarkdown,render)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_remove)
