--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,17 +6,25 @@ export(getID)
 export(getPlayers)
 export(getStats)
 export(getWin)
+export(getWinner)
 export(leg1p)
+export(leg2p)
 export(match1p)
+export(match2p)
 export(set1p)
+export(set2p)
 exportClasses(leg1p)
+exportClasses(leg2p)
 exportClasses(match1p)
+exportClasses(match2p)
 exportClasses(set1p)
+exportClasses(set2p)
 exportMethods(getDate)
 exportMethods(getID)
 exportMethods(getPlayers)
 exportMethods(getStats)
 exportMethods(getWin)
+exportMethods(getWinner)
 exportMethods(show)
 exportMethods(summary)
 importFrom(knitr,kable)
