fatto match completo, DA TESTARE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,10 +9,13 @@ export(getWin)
 export(getWinner)
 export(leg1p)
 export(leg2p)
+export(leg_501)
 export(match1p)
 export(match2p)
+export(match_501)
 export(set1p)
 export(set2p)
+export(set_501)
 exportClasses(leg1p)
 exportClasses(leg2p)
 exportClasses(match1p)
@@ -27,4 +30,18 @@ exportMethods(getWin)
 exportMethods(getWinner)
 exportMethods(show)
 exportMethods(summary)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
+importFrom(dplyr,summarise)
+importFrom(huxtable,everywhere)
+importFrom(huxtable,hux)
+importFrom(huxtable,print_screen)
+importFrom(huxtable,set_align)
+importFrom(huxtable,set_position)
 importFrom(knitr,kable)
+importFrom(magrittr,"%>%")
+importFrom(stringr,str_split)
+importFrom(svDialogs,dlg_form)
