--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(leg_501)
 export(match1p)
 export(match2p)
 export(match_501)
+export(saveMatch)
 export(set1p)
 export(set2p)
 export(set_501)
@@ -35,7 +36,9 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
 importFrom(huxtable,everywhere)
 importFrom(huxtable,hux)
 importFrom(huxtable,print_screen)
