update NAMESPACE and DESCRIPTION file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(getWinner)
 export(leg1p)
 export(leg2p)
 export(leg_501)
+export(loadMatch)
 export(match1p)
 export(match2p)
 export(match_501)
