new function: loadTraining501

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(leg2p)
 export(leg_501)
 export(legtr)
 export(loadMatch)
+export(loadTraining501)
 export(match1p)
 export(match2p)
 export(match_501)
